--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Main Page of Dero Development</h1>
+<p>In the future you will find further information about Dero Development on this site.</p>
 </body>
 </html>
