--- a/datenschutz.html
+++ b/datenschutz.html
@@ -1,5 +1,6 @@
 <html>
-<h1>Datenschutzerklärung</h1>
+<h1>German</h1>
+<h2>Datenschutzerklärung</h2>
 Stand: 23.06.2023
 
 Diese Datenschutzerklärung beschreibt, wie personenbezogene Daten gesammelt, verwendet und offengelegt werden, wenn du diese App (im Folgenden "App" genannt) nutzt.
@@ -21,5 +22,29 @@ Wir behalten uns das Recht vor, diese Datenschutzerklärung jederzeit zu ändern
 
 <h3>Kontakt</h3>
 Wenn du Fragen, Bedenken oder Anfragen bezüglich dieser Datenschutzerklärung hast, kontaktiere uns bitte unter: dero.developer@gmail.com
+
+<h1>English</h1>
+<h2>Privacy policy</h2>
+Last updated: 06/23/2023
+
+This Privacy Policy describes how personal information is collected, used, and disclosed when you use this app (the "App").
+
+<h3>Camera Usage</h3>
+The App uses your device's camera to scan QR codes and barcodes. Camera images are processed only locally on your device and are not shared with third parties. We do not collect or store any personal data during the scanning process.
+
+<h3>Advertisements</h3>
+The app contains advertisements provided by third-party advertisers. These third parties may collect and use information about your interactions with the ads to personalize and improve ads. This information may include technical data about your device, your IP address, your location, and other information relevant to the ad serving. This data is processed by ad service providers in accordance with their own privacy policies. Please note that we do not have direct access to or control over the data collected by these third party providers.
+
+<h3>Third Party Providers and Data Sharing</h3>
+We may work with third party vendors to provide certain features or services included in the App. These third party providers have access to certain personal information necessary to perform their functions. However, they are required not to use or disclose this information for any other purpose. We take reasonable steps to ensure that these third-party providers comply with privacy standards.
+
+<h3>Security</h3>
+We use reasonable security measures to protect personal information that is collected and stored in the App. However, please note that no method of data transmission over the Internet or electronic storage is 100% secure. Therefore, we cannot guarantee absolute security.
+
+<h3>Changes to this privacy policy</h3>
+We reserve the right to change or update this Privacy Policy at any time. You should check this page periodically to stay informed of any changes. Your continued use of the App following the posting of changes to this Privacy Policy will be deemed to be your acceptance of the changes.
+
+<h3>Contact</h3>
+If you have any questions, concerns or requests regarding this Privacy Policy, please contact us at: dero.developer@gmail.com
 
 </html>
